# dev-kits

./: .gitignore  CMakeLists.txt  README.md  common.h
Logger/: Logger.cpp  Logger.h  README.md
asio/: client.cpp  client.h
cmake/: boost.cmake  options.cmake
core/: CMakeLists.txt  common.h
core/asio/: server.cpp  server.h
core/logger/: README.md  logger.cpp  logger.h
core/utility/: README.md  utility.cpp  utility.h
logger/: logger.cpp  logger.h
sample/: CMakeLists.txt  main.cpp
sample/sample/: logger_sample.h  utility_sample.h
utility/: README.md  utility.h
